--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -3,4 +3,7 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @item %> |
-<%= link_to 'Back', items_path %>
+<% if @is_admin %>
+<%= link_to 'Destroy', @item, method: :delete, data: { confirm: 'Are you sure?' } %> |
+<% end %>
+<%= link_to 'Item list', items_path %>
