--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -1,6 +1,6 @@
 
 <div id="search">
-<form action="<%= namespace %>/items" style="display: inline" method="get" id="search-form">
+<form action="/items" style="display: inline" method="get" id="search-form">
     Search:
     <span class="ui-widget">
     <input name="q" id="search-field">
