--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,5 +1,5 @@
 
-<li id="item" style="display: block;background-color: #eeeeee;  border:solid; text-align: left">
+<li class="item">
   <a href="<%= item_path(item) %>" style="display: block; height: 120px">
       <b>
         <img src="<%= item.image_url(:thumbnail) %>" id="item-list-img;" >
