--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,10 +10,14 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
- *= require_self
- *= require jquery-ui
  */
+
+@import "bootstrap-sprockets";
+@import "bootstrap";
+@import "admin.scss";
+@import "search.scss";
+@import "items.scss";
+@import "pagination.scss";
 
 
 #content {
@@ -22,6 +26,8 @@
     background-color: #eeeeee;
     overflow: auto;
 }
+
+
 
 
 
