--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,10 +1,8 @@
 
 <li class="item">
   <a href="<%= item_path(item) %>" style="display: block; height: 120px">
-      <b>
-        <img src="<%= item.image_url(:thumbnail) %>" id="item-list-img;" >
-        <%= item.annotated_name %>
-      </b>
+      <img src="<%= item.image_url(:thumbnail) %>" class="img-thumbnail">
+      <b><%= item.annotated_name %></b>
       <br>
       <%= item.description[0..200] << '...' if item.description.size > 200 %>
   </a>
