--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -52,11 +52,8 @@
     <strong>Description:</strong>
     <%= @item.description %>
 
-  <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-    <input type="hidden" name="cmd" value="_s-xclick">
-    <input type="hidden" name="hosted_button_id" value="SDRWCR94NCSZ2">
-    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-  </form>
 
+  <a href="/items/buy/<%= @item.id %>">
+    <img src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif">
+  </a>
 </div>
