--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -1,38 +1,39 @@
 
-<div id="search">
-<form action="/items" style="display: inline" method="get" id="search-form">
-    Search:
-    <span class="ui-widget">
-    <input name="q" id="search-field">
-    </span>
-    <%= submit_tag("Search") %>
-    <select name="all_or_any">
-      <option value="any">Any words</option>
-      <option value="all">All words</option>
-    </select>
-    Sort by:
-    <select name="sort_by">
-      <option value="relevance">Relevance</option>
-      <option value="newest">Newest</option>
-      <option value="oldest">Oldest</option>
-      <option value="most_views">Most viewed</option>
-      <option value="least_views">Least viewed</option>
-      <option value="year_highest_to_lowest">Year(high to low)</option>
-      <option value="year_lowest_to_highest">Year(low to high)</option>
-      <option value="grade_highest_to_lowest">Grade(high to low)</option>
-      <option value="grade_lowest_to_highest">Grade(low to high)</option>
-    </select>
-</form>
-<a href="#" onclick="$('#advanced-search').fadeToggle()">Advanced Search</a>
-<% if @params_string != nil %>
-    Showing results for: <%= @params_string %>
-    <form action="/items" style="display:inline;">
-      <input type="submit" value="Clear results">
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <form action="/items" class="navbar-form pull-right" method="get" id="search-form">
+      <div class="form-group">
+        <label for="search-field">
+        Search:
+        </label>
+        <span class="ui-widget">
+        <input name="q" id="search-field" class="form-control">
+        </span>
+        <%= submit_tag('Search', class: 'form-control') %>
+        <select name="all_or_any" class="form-control">
+          <option value="any">Any words</option>
+          <option value="all">All words</option>
+        </select>
+        <label for="sort_by">
+        Sort by:
+        </label>
+        <select class="form-control" name="sort_by" id="sort_by">
+          <option value="relevance">Relevance</option>
+          <option value="newest">Newest</option>
+          <option value="oldest">Oldest</option>
+          <option value="most_views">Most viewed</option>
+          <option value="least_views">Least viewed</option>
+          <option value="year_highest_to_lowest">Year(high to low)</option>
+          <option value="year_lowest_to_highest">Year(low to high)</option>
+          <option value="grade_highest_to_lowest">Grade(high to low)</option>
+          <option value="grade_lowest_to_highest">Grade(low to high)</option>
+        </select>
+        <a href="#" onclick="$('#advanced-search').fadeToggle()">Advanced Search</a>
+      </div>
     </form>
-<% end %>
 
-
-</div>
+  </div>
+</nav>
 <div id='advanced-search'>
     <%= render 'shared/advanced_search' %>
 </div>
