--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -1,8 +1,10 @@
 
 <nav class="navbar navbar-default">
   <div class="container-fluid">
-    <form action="/items" class="navbar-form pull-right" method="get" id="search-form">
-      <div class="form-group">
+    <img src="/images/dadscards.png" style="display: inline;">
+    <span style="vertical-align: bottom">
+    <form action="/items" class="navbar-form pull-right pull-bottom" method="get" id="search-form">
+      <div class="form-group" style="display: inline">
         <label for="search-field">
         Search:
         </label>
@@ -31,6 +33,7 @@
         <a href="#" onclick="$('#advanced-search').fadeToggle()">Advanced Search</a>
       </div>
     </form>
+    </span>
 
   </div>
 </nav>
