--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-    <ul class="list-group" style="list-style: none">
+    <ul class="list-group" id="items" style="list-style: none">
         <% @items.each do |item| %>
             <%= render item %>
         <% end %>
