--- a/app/assets/stylesheets/items.scss
+++ b/app/assets/stylesheets/items.scss
@@ -1,8 +1,26 @@
 
 
-.panel-item {
+
+#items  {
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
+#items img {
   float: left;
-  margin: 0 10px;
+  margin: 0 15px 0 0;
+}
+
+
+
+
+#item :hover {
+  background-color: #730E15;
+}
+
+#item :visited {
+  background-color: yellow;
 }
 
 
