added uploads to .gitignore

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,34 @@
 @import "pagination.scss";
 @import "home.scss";
 
+$footer-height: 75px;
+
+html, body {
+  height: 100%;
+  margin:0px;
+  padding:0px;
+}
+
+#wrapper {
+  min-height:100%;
+  position:relative;
+}
+
+.footer {
+  margin:0px;
+
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #2E2F30;
+  height: $footer-height;
+};
+
+.main {
+  padding-bottom: $footer-height;
+}
+
 #content {
     padding: 10px;
     border-style: solid;
