--- a/app/views/shared/_advanced_search.html.erb
+++ b/app/views/shared/_advanced_search.html.erb
@@ -1,3 +1,4 @@
+<div class="panel">
 <div class="container">
 <form action="<%= namespace %>/items" id="advanced-search-form">
   <div class="form-group">
@@ -169,4 +170,5 @@
   <input type="submit" class="form-control" onclick="advancedSearchFormSubmit()">
   </div>
 </form>
+</div>
 </div>
