--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -1,24 +1,38 @@
 
 <nav class="navbar navbar-default">
   <div class="container-fluid">
-    <img src="/images/dadscards.png" style="display: inline;">
-    <span style="vertical-align: bottom">
-    <form action="/items" class="navbar-form pull-right pull-bottom" method="get" id="search-form">
-      <div class="form-group" style="display: inline">
-        <label for="search-field">
-        Search:
-        </label>
+
+    <ul class="nav navbar-nav">
+        <li>
+        <a href="/">
+        <img src="/images/dadscards.png">
+        </a>
+        </li>
+
+      <li>
+        <a href="#">
+          About
+        </a>
+        </li>
+
+        <li>
+        <a href="mailto:#">
+          Contact
+        </a>
+        </li>
+    </ul>
+
+    <form action="/items" class="navbar-form navbar-left" method="get" id="search-form">
+      <div class="form-group">
         <span class="ui-widget">
-        <input name="q" id="search-field" class="form-control">
+        <input name="q" id="search-field" class="form-control" placeholder="Search">
         </span>
-        <%= submit_tag('Search', class: 'form-control') %>
+        <%= submit_tag('Submit', class: 'form-control') %>
         <select name="all_or_any" class="form-control">
           <option value="any">Any words</option>
           <option value="all">All words</option>
         </select>
-        <label for="sort_by">
         Sort by:
-        </label>
         <select class="form-control" name="sort_by" id="sort_by">
           <option value="relevance">Relevance</option>
           <option value="newest">Newest</option>
@@ -30,15 +44,19 @@
           <option value="grade_highest_to_lowest">Grade(high to low)</option>
           <option value="grade_lowest_to_highest">Grade(low to high)</option>
         </select>
-        <a href="#" onclick="$('#advanced-search').fadeToggle()">Advanced Search</a>
-      </div>
+       </div>
     </form>
-    </span>
+    <ul class="nav navbar-nav">
+      <li>
+      <a href="#" onclick="$('#advanced-search').fadeToggle()">Advanced Search</a>
+        <div id='advanced-search' class="dropdown-menu pull-right">
+          <%= render 'shared/advanced_search' %>
+        </div>
+      </li>
+    </ul>
 
   </div>
 </nav>
-<div id='advanced-search'>
-    <%= render 'shared/advanced_search' %>
-</div>
+
 
 
