--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -12,9 +12,16 @@
             <div class="panel-item">
               <img src="<%= item.image_url(:thumbnail) %>">
             </div>
-            <div class="panel-item">
-                <%= item.description[0..200] << '...' if item.description.size > 200 %>
-            </div>
+            <span class="panel-item" style="color:red;"><p><b>
+                $<%= sprintf('%.2f', item.price_cents / 100) %>
+              </b></p>
+            </span>
+            <span class="panel-item">
+            <p>
+                <%= item.description[0..260] << '...' if item.description.size > 260 %>
+            </p>
+            </span>
+
         </div>
 
       </div>
