--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -6,7 +6,9 @@
     </ul>
 </div>
 <br>
-<div class="pagination">
-    <%= will_paginate @items %>
+
+<div align="center">
+<%= will_paginate @items %>
 </div>
+
 
