--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -10,7 +10,7 @@
 
         <div class="panel-body">
             <div class="panel-item">
-              <img src="<%= item.image_url(:thumbnail) %>">
+              <%= image_tag @item.image_url(:medium) %>
             </div>
             <span class="panel-item" style="color:red;"><p><b>
                 $<%= sprintf('%.2f', item.price_cents / 100) %>
