fixed images and prices on heroku

--- a/app/views/admin/items/_form.html.erb
+++ b/app/views/admin/items/_form.html.erb
@@ -85,5 +85,8 @@
     <%= f.label :quantity %><br>
     <%= f.text_field :quantity, :style => 'width:40px;' %><br><br>
 
+    <%= f.label 'Price $' %><br>
+    <%= f.text_field :price_cents, :style => 'display:80px;', id: 'price-cents' %><br><br>
+
     <%= f.submit %>
 <% end %>
