fixed pagination with boostraps

--- a/app/views/admin/items/_form.html.erb
+++ b/app/views/admin/items/_form.html.erb
@@ -86,7 +86,7 @@
     <%= f.text_field :quantity, :style => 'width:40px;' %><br><br>
 
     <%= f.label 'Price $' %><br>
-    <%= f.text_field :price_cents, :style => 'display:80px;', id: 'price-cents' %><br><br>
+    <%= f.text_field :price_cents, :style => 'display:80px;', id: 'price-cents', value: (@item.price_cents / 100) %><br><br>
 
     <%= f.submit %>
 <% end %>
